Update route security context
