# src/api/favouriteRegion/index.js
@@ -12,7 +12,7 @@ const favouriteRegionAdminRouter = Router();
 
 const table = '/favouriteRegion';
 
-favouriteRegionRouter.get(table, getAll);
+favouriteRegionAuthRouter.get(table, getAll);
 
 favouriteRegionAuthRouter.get(`${table}/:id`, findOne);
 
@@ -20,6 +20,6 @@ favouriteRegionAuthRouter.patch(`${table}/:id`, updateOne);
 
 favouriteRegionAuthRouter.post(`${table}`, create);
 
-favouriteRegionAuthRouter.delete(`${table}/:id`, deleteOne);
+favouriteRegionAdminRouter.delete(`${table}/:id`, deleteOne);
 
 export { favouriteRegionRouter, favouriteRegionAuthRouter, favouriteRegionAdminRouter };
